--- a/src/styles/sass/components/Header.scss
+++ b/src/styles/sass/components/Header.scss
@@ -1,10 +1,10 @@
-@use "../styles.scss" as *;
+@use "../style.scss" as *;
 
 .Header {
   width: 100%;
   z-index: 1000;
   @include res_desktop {
-    height: 10vh;
+    background-color: red;
     top: 0;
     position: sticky;
     height: 10vh;
@@ -25,7 +25,6 @@
     align-items: center;
     padding: 0 2rem;
     height: 100%;
-    font-size: 10px;
     div,
     a {
       font-size: 14px;
