--- a/src/styles/sass/components/Header.scss
+++ b/src/styles/sass/components/Header.scss
@@ -4,6 +4,7 @@
   width: 100%;
   z-index: 1000;
   @include res_desktop {
+    background: var(--background);
     top: 0;
     position: sticky;
     height: 8vh;
@@ -14,8 +15,16 @@
     justify-content: center;
     align-items: center;
     img {
-      width: 100%;
+      width: 50px;
       height: auto;
+    }
+    .Header__logo_text {
+      font-size: 20px;
+      font-weight: 800;
+      background: linear-gradient(90deg, red, purple);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
     }
   }
   .Header__desktop {
