--- a/src/styles/sass/components/Header.scss
+++ b/src/styles/sass/components/Header.scss
@@ -3,30 +3,11 @@
 .Header {
   width: 100%;
   z-index: 1000;
-  @include res_desktop {
-    background: var(--background);
-    top: 0;
-    position: sticky;
-    height: 8vh;
-  }
-  .Header__logo {
-    width: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    img {
-      width: 50px;
-      height: auto;
-    }
-    .Header__logo_text {
-      font-size: 20px;
-      font-weight: 800;
-      background: linear-gradient(90deg, red, purple);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-    }
-  }
+  background: black;
+  color: white;
+  top: 0;
+  position: sticky;
+  // height: 8vh;
   .Header__desktop {
     display: flex;
     justify-content: space-between;
@@ -40,6 +21,28 @@
     }
   }
   .Header__phone {
+    width: 100%;
     height: 8vh;
+    // overflow-x: hidden;
+    color: white;
+  }
+}
+
+.Header__logo {
+  width: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    width: 50px;
+    height: auto;
+  }
+  .Header__logo_text {
+    font-size: 20px;
+    font-weight: 800;
+    background: linear-gradient(90deg, red, #33c5d8d6);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
   }
 }
