--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -298,6 +298,7 @@ input::placeholder {
 
 .coolBackgroundEffect:hover {
   @apply bg-gradient-to-r from-primary to-secondary;
+  color: white;
   border-radius: 10px;
 }
 
