--- a/src/styles/sass/components/Header.scss
+++ b/src/styles/sass/components/Header.scss
@@ -7,7 +7,12 @@
   color: white;
   top: 0;
   position: sticky;
-  // height: 8vh;
+  @include res_desktop {
+    height: 8vh;
+  }
+  @include res_phone {
+    height: 10vh;
+  }
   .Header__desktop {
     display: flex;
     justify-content: space-between;
@@ -22,7 +27,7 @@
   }
   .Header__phone {
     width: 100%;
-    height: 8vh;
+    height: 0vh;
     // overflow-x: hidden;
     color: white;
   }
@@ -44,5 +49,16 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+  }
+}
+
+.openSidebarTrigger {
+  @include res_phone {
+    // background-color: yellow;
+    padding-top: 6vh;
+    @include res_phone_custom(420px) {
+      padding-top: 10vh;
+      // background-color: green;
+    }
   }
 }
